[package]
name = "processor_emulator"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.77"
wasm-bindgen-futures = "0.4.55"
gloo-timers = { version = "0.3.0", features = ["futures"]}


[dependencies.web-sys]
version = "0.3.82"
features = [
    "Window",
    "Document",
    "console"
]
